--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -1,5 +1,6 @@
 
 <form class="view-form" name="organizationForm" novalidate>
+
 	<div class="view-title-container flex-row">
 		<h1>Add/Edit Organization <span ng-if="org.name">&nbsp; &rsaquo; &nbsp;{{ org.name }}</span></h1>
 		<div class="actions">
@@ -106,5 +107,5 @@
 			</div>
 		</div>
 
-	</div><!-- / VIEW BODY CONTAINER -->
+	</div>
 </form>
