--- a/modules/groups/client/views/group-view.html
+++ b/modules/groups/client/views/group-view.html
@@ -26,14 +26,9 @@
 			<tr ng-repeat="o in $data">
 				<td class="name-col"
 					header-class="'name-col'"
-					data-title="'Last Name'"
-					filter="{'lastName':'text'}"
-					sortable="'lastName'">{{o.lastName}}</td>
-				<td class="name-col"
-					header-class="'name-col'"
-					data-title="'First Name'"
-					filter="{'firstName':'text'}"
-					sortable="'firstName'">{{o.firstName}}</td>
+					data-title="'Name'"
+					filter="{'displayName':'text'}"
+					sortable="'displayName'">{{o.displayName}}</td>
 				<td class="email-col"
 					header-class="'email-col'"
 					data-title="'Email'"
