--- a/modules/organizations/client/views/org-entry.html
+++ b/modules/organizations/client/views/org-entry.html
@@ -116,35 +116,35 @@
 					</div>
 				</div>
 			</fieldset>
+
 		</div><!-- / DETAILS TAB CONTENT -->
 
 		<!-- USERS TAB CONTENT -->
 		<div class="tab-pane" id="orgUsers" role="tabpanel">
-			<div class="button-bar clearfix">
-				<a ng-show="enableAddContact" class="btn btn-default btn-sm pull-left" ui-sref="admin.organization.user.create({orgId: org._id})">
+			<div class="button-bar">
+				<a ng-show="enableAddContact" class="btn btn-default btn-sm" ui-sref="admin.organization.user.create({orgId: org._id})">
 					<span class="glyphicon glyphicon-plus"></span><span>Add Contact</span>
 				</a>
-				<div class="pull-right">
-					<show-filter x-toggle-filter="toggleFilter"></show-filter>
-				</div>
 			</div>
-			<div class="panel panel-default">
-				<table ng-table="userTableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
+			<div class="table-container">
+				<table class="table table-hover" ng-table="userTableParams" x-show-filter="true">
 					<tr ng-repeat="o in $data" class='clickable' ui-sref="admin.organization.user.detail({orgId: org._id, userId: o._id})">
 						<td data-title="'Last Name'" filter="{'lastName':'text'}" sortable="'lastName'">{{o.lastName}}</td>
 						<td data-title="'First Name'" filter="{'firstName':'text'}" sortable="'firstName'">{{o.firstName}}</td>
 						<td data-title="'Email'" filter="{'email':'text'}" sortable="'email'" >{{o.email}}</td>
-						<td class="actions-col action-x2" header-class="'actions-col action-x2'">
-							<a ng-show="enableEditContact" class="btn btn-default btn-sm" ng-click="$event.stopPropagation()" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
-								<span class="glyphicon glyphicon-pencil"></span>
-							</a>
-							<a ng-show="enableRemoveContact" class="btn btn-default btn-sm" title="Remove User from Organization" ng-click="$event.stopPropagation();removeUserFromOrg(o._id)">
-								<span class="glyphicon glyphicon-trash"></span>
-							</a>
+						<td class="actions-col" header-class="'actions-col x2'">
+							<div class="btns">
+								<a class="btn icon-btn" title="Edit User" ng-show="enableEditContact" ng-click="$event.stopPropagation()" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
+									<span class="glyphicon glyphicon-pencil"></span>
+								</a>
+								<a class="btn icon-btn" title="Remove User from Organization" ng-show="enableRemoveContact" ng-click="$event.stopPropagation();removeUserFromOrg(o._id)">
+									<span class="glyphicon glyphicon-trash"></span>
+								</a>
+							</div>
 						</td>
 					</tr>
 					<tr class="no-records" ng-show="!$data || !$data.length" class="text-center">
-						<td colspan="2">No records found.</td>
+						<td colspan="5">No records found.</td>
 					</tr>
 				</table>
 			</div>
@@ -152,18 +152,13 @@
 
 		<!-- project TAB CONTENT -->
 		<div class="tab-pane" id="orgProjects" role="tabpanel">
-			<div class="button-bar clearfix">
-				<div class="pull-right">
-					<show-filter x-toggle-filter="toggleFilter"></show-filter>
-				</div>
-			</div>
-			<div class="panel panel-default">
-				<table ng-table="projectTableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
+			<div class="table-container">
+				<table ng-table="projectTableParams" x-show-filter="true" class="table table-striped table-hover">
 					<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
 						<td header-class="'name-col'"
 							data-title="'Name'"
 							filter="{'name':'text'}"
-							sortable="'name'"><a ui-sref="p.detail({projectid: o.code})">{{o.name}}</a></td>
+							sortable="'name'">{{o.name}}</td>
 						<td header-class="'type-col'"
 							data-title="'Type'"
 							filter="{'type':'text'}"
