--- a/modules/project-conditions/client/views/projectcondition-list.html
+++ b/modules/project-conditions/client/views/projectcondition-list.html
@@ -6,16 +6,13 @@
 </div>
 
 <div class="view-body-container">
-	<div class="button-bar clearfix">
+	<div class="button-bar">
 		<a ng-if="project.userCan.createProjectCondition" class="btn btn-default btn-sm" ui-sref="p.projectcondition.create()">
 			<span class="glyphicon glyphicon-plus"></span>
 			<span>Add Condition</span>
 		</a>
-		<div class="pull-right">
-			<show-filter x-toggle-filter="toggleFilter"></show-filter>
-		</div>
 	</div>
-	<section class="panel panel-default">
+	<section class="table-container">
 		<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-hover">
 			<tr ng-repeat="o in $data" ui-sref="p.projectcondition.detail({conditionId:o._id})" class="clickable">
 				<td data-title="'Name'"
@@ -30,15 +27,16 @@
 				<td data-title="'Phases'"
 					filter="{'phases':'text'}"
 					sortable="'phases'">{{o.phases.join(', ')}}</td>
-				<td class="actions-col action-x2" 
-					header-class="'actions-col action-x2'">
-					<a class="btn btn-link btn-sm" 
-						ng-if="showedit" 
-						ng-click="$event.stopPropagation()" 
-						ui-sref="p.projectcondition.edit({conditionId:o._id})">
-						<span class="glyphicon glyphicon-pencil"></span>
-					</a>
-					<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="o"></tmpl-permissions-gear>
+				<td class="actions-col" header-class="'actions-col x2'">
+					<div class="btns">
+						<a class="btn icon-btn" 
+							ng-if="showedit" 
+							ng-click="$event.stopPropagation()" 
+							ui-sref="p.projectcondition.edit({conditionId:o._id})">
+							<span class="glyphicon glyphicon-pencil"></span>
+						</a>
+						<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="o"></tmpl-permissions-gear>
+					</div>
 				</td>
 			</tr>
 			<tr ng-if="!$data || $data.length === 0">
