--- a/modules/topics/client/views/topic-list.html
+++ b/modules/topics/client/views/topic-list.html
@@ -5,7 +5,7 @@
 
 <div class="view-body-container">
 	<div class="button-bar">
-		<a ng-if="application.userCan.createValuedComponent" class="btn btn-default btn-sm pull-left" ui-sref="admin.topic.create()">
+		<a class="btn btn-default btn-sm" ng-if="application.userCan.createValuedComponent" ui-sref="admin.topic.create()">
 			<span class="glyphicon glyphicon-plus"></span>
 			<span>Add Valued Component</span>
 		</a>
