ESM-767 PCP banner has button to take user to details page of PCP

--- a/modules/project-comments/client/scss/project-comments.scss
+++ b/modules/project-comments/client/scss/project-comments.scss
@@ -45,6 +45,18 @@
             } 
         }
     }
+    .pcp-details-btn {
+        .btn {
+            background-color: #5091cd;
+            color: #FFF;
+            font-size: 1.6rem;
+            font-weight: normal;
+
+            &:hover {
+                background: #5f9bd1;
+            }
+        }
+    }
 }
 
 @media (min-width: 760px) {
