--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -6,6 +6,7 @@
 
 <div class="view-body-container">
 
+	<!-- This page shows the details of a PCP -->
 	<div class="pcp-alert-container">
 		<div class="pcp-alert">
 			<div class="pcp-alert-info">
