--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -20,14 +20,15 @@
 	<div class="tab-pane" ng-show="s.userView">
 		<div class="form-group select-permission">
 			<label class="control-label">Select User</label>
-			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="user.displayName for user in s.allUsers"></select>
-      <button ng-if="s.context.userCan.addUsersToContext" class="btn btn-default btn-sm" type="button"
-              x-user-search-chooser
-              x-title="'Select Contacts'"
-              x-project="s.context"
-              x-destination="contacts"><span class="glyphicon glyphicon-plus"></span><span>Add User</span></button>
-
-    </div>
+			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="user.lastName +', '+ user.firstName for user in s.allUsers | orderBy: 'lastName'"></select>
+			<button ng-if="s.context.userCan.addUsersToContext" class="btn btn-default btn-sm" type="button"
+				x-user-search-chooser
+				x-title="'Select Contacts'"
+				x-project="s.context"
+				x-destination="contacts">
+				<span class="glyphicon glyphicon-plus"></span><span>Add User</span>
+			</button>
+    	</div>
 		<div class="form-group manage-permission no-margin">
 			<label class="control-label">Manage Roles for User</label>
 			<tmpl-role-new context="s.context" class="new-role-btn" ng-if="s.context.userCan.createRole"></tmpl-role-new>
@@ -58,22 +59,24 @@
 		</div>
 		<div class="form-group manage-permission no-margin">
 			<label class="control-label">Manage Users for Role</label>
-      <button ng-if="s.context.userCan.addUsersToContext" class="btn btn-default btn-sm" type="button"
-              x-user-search-chooser
-              x-title="'Select Contacts'"
-              x-project="s.context"
-              x-destination="contacts"><span class="glyphicon glyphicon-plus"></span><span>Add User</span></button>
+      		<button ng-if="s.context.userCan.addUsersToContext" class="btn btn-default btn-sm" type="button"
+				x-user-search-chooser
+				x-title="'Select Contacts'"
+				x-project="s.context"
+				x-destination="contacts">
+				<span class="glyphicon glyphicon-plus"></span><span>Add User</span>
+			</button>
 		</div>
 		<div class="panel panel-default">
 			<ul class="list-group">
-				<li class="list-group-item" ng-repeat="u in s.allUsers">
+				<li class="list-group-item" ng-repeat="u in s.allUsers | orderBy: 'lastName'">
 					<div class="checkbox">
 						<label>
               				<input type="checkbox"
 								ng-disabled="!s.currentRole"
                      			ng-change="s.clickUser(u, s.currentRole, s.userRoleIndex.role[s.currentRole][u.username])"
                      			ng-model="s.userRoleIndex.role[s.currentRole][u.username]">
-              				</input>{{ u.displayName }}
+              				</input>{{u.lastName}},&nbsp;{{u.firstName}}
             			</label>
 					</div>
 				</li>
